# ResearchPaper_Agent

./: .gitignore  LICENSE  README.md  agents.py  app.py  bibtex_parser.py  fetch_semantic.py  generator.py  latex_writer.py  main.py  pdf_reader.py  plagiarism.py  pyproject.toml  rag.py  requirements.txt  research.py
